@@ -145,8 +145,9 @@ setMethod(f="summary",
                   if (!is.null(threes)) {
                       rownames(threes) <- paste("    ", dataLabel(names[!isTime], units))
                       colnames(threes) <- c("Min.", "Mean", "Max.")
-                      cat("* Statistics of data\n")
+                      cat("* Statistics of data\n```\n")
                       print(threes, indent='')
+                      cat("```\n")
                   }
               }
               processingLogShow(object)
