@@ -165,5 +165,7 @@ is the main document describing argo data.
 \seealso{
 The documentation for \code{\link{argo-class}} explains the structure of argo
 objects, and also outlines the other functions dealing with them.
+
+Other functions that deal with argo data: \code{\link{as.argo}}
 }
 
